Revamp GPA calculator UI and logic
Improved the GPA calculator by updating the grade mapping, refining the add/remove course logic, and enhancing the calculation method for accuracy. Updated the HTML to use semantic classes for buttons and improved the UI/UX with new styles for buttons, course inputs, and layout.

--- a/Index.html
+++ b/Index.html
@@ -14,8 +14,8 @@
       <!-- Course inputs will go here -->
     </div>
 
-    <button onclick="addCourse()">➕ Add Course</button>
-    <button onclick="calculateGPA()">📊 Calculate GPA</button>
+    <button class="add-btn" onclick="addCourse()">➕ Add Course</button>
+    <button class="calculate-btn" onclick="calculateGPA()">📊 Calculate GPA</button>
 
     <h2 id="result">GPA: --</h2>
   </div>
